--- a/styles/blog.css
+++ b/styles/blog.css
@@ -2,9 +2,9 @@
     background-color: tomato;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: justify;
-    border: 5px solid orange;
-    margin: 15px 15px;
-    padding: 10px;
+    border: 3px solid blueviolet;
+    margin: 10px;
+    padding: 5px;
     
 }
 
