--- a/styles/blog.css
+++ b/styles/blog.css
@@ -5,6 +5,13 @@
     border: 3px solid blueviolet;
     margin: 10px;
     padding: 5px;
-    
+}
+.nature{
+    background-color: tomato;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: justify;
+    border: 3px solid blueviolet;
+    margin: 10px;
+    padding: 5px;
 }
 
